Level 1 Evaluator
- Implementatie van Level 1 evaluator